--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,6 @@
   <title></title>
 </head>
 <body>
-  <h2>hello World </h2>
-  <h2>hello World </h2>
-  <h2>hello World </h2>
+  <h2>hello from browser</h2>
 </body>
 </html>
