CURVE Bottom of header picture has been styliezd by white curve border.

--- a/app/index.html
+++ b/app/index.html
@@ -69,22 +69,23 @@
         <!--   </div> -->
         <!-- </div> -->
         <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light tm-header-transparent-placeholder>
-          <div class="section-background-img uk-background-norepeat uk-background-cover uk-background-center-center uk-background-fixed uk-section uk-section-large">
-            <div class=uk-position-cover style="background-color: rgba(0, 0, 0, 0.27);"></div>
-            <div class="uk-container uk-position-relative">
-              <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
-                <div class=uk-width-1-1@m>
-                  <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center" uk-scrollspy-class><h1 style="text-align: left;"><span style="font-size: 36pt;">&nbsp; &nbsp; 739-202-440</span><br /><br />Malowanie wnętrz Poznań<br />Kompleksowe remonty<br />Budowa domów<br /><br /></h1> <span style="font-size: 36pt; color: #666666;"><br /></span> </h1>
-                  <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-large" uk-scrollspy-class=uk-animation-slide-left-small>
-                    <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
-                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
-                      <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href=https://malujemypoznan.com.pl/oferta> Nasza Oferta </a> </div>
+          <div class="bottom-curve"></div>
+            <div class="section-background-img uk-background-norepeat uk-background-cover uk-background-center-center uk-background-fixed uk-section uk-section-large">
+              <div class=uk-position-cover style="background-color: rgba(0, 0, 0, 0.27);"></div>
+              <div class="uk-container uk-position-relative">
+                <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
+                  <div class=uk-width-1-1@m>
+                    <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center" uk-scrollspy-class><h1 style="text-align: left;"><span style="font-size: 36pt;">&nbsp; &nbsp; 739-202-440</span><br /><br />Malowanie wnętrz Poznań<br />Kompleksowe remonty<br />Budowa domów<br /><br /></h1> <span style="font-size: 36pt; color: #666666;"><br /></span> </h1>
+                    <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-large" uk-scrollspy-class=uk-animation-slide-left-small>
+                      <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
+                        <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
+                        <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href=https://malujemypoznan.com.pl/oferta> Nasza Oferta </a> </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
         </div>
         <div id=firma class="uk-section-default uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-medium&quot;,&quot;delay&quot;:200}>
           <div class="uk-grid-large uk-margin-xlarge" uk-grid>
