CONTACT FORM Contact form added to last section of page.

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,6 @@
         <!--   </div> -->
         <!-- </div> -->
         <!--End of navigation -->
-
         <!-- Header image -->
         <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light tm-header-transparent-placeholder>
           <div class="bottom-curve"></div>
@@ -211,6 +210,35 @@
                 </div>
                 <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
                   <div class=uk-panel>
+                    <form>
+                      <fieldset class="uk-fieldset">
+                        <legend class="uk-legend">Legend</legend>
+                        <div class="uk-margin">
+                          <input class="uk-input" type="text" placeholder="Input">
+                        </div>
+                        <div class="uk-margin">
+                          <input class="uk-input" type="text" placeholder="Input">
+                        </div>
+                        <div class="uk-margin">
+                          <input class="uk-input" type="text" placeholder="Input">
+                        </div>
+                        <div class="uk-margin">
+                          <textarea class="uk-textarea" rows="5" placeholder="Textarea"></textarea>
+                        </div>
+                        <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                          <label><input class="uk-radio" type="radio" name="radio2" checked> A</label>
+                          <label><input class="uk-radio" type="radio" name="radio2"> B</label>
+                        </div>
+                        <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                          <label><input class="uk-checkbox" type="checkbox" checked> A</label>
+                          <label><input class="uk-checkbox" type="checkbox"> B</label>
+                        </div>
+                      </fieldset>
+                    </form>
+                  </div>
+                </div>
+                <div class="uk-width-medium@m uk-grid-item-match uk-flex-middle">
+                  <div class=uk-panel>
                     <h2 class="uk-text-center@s uk-text-center uk-h1" uk-scrollspy-class> Piotr Trajdos </h2>
                     <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
                       <p>Ul. Brzozowa 21, 62-002 Jelonek.</p>
@@ -218,11 +246,6 @@
                     <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
                       <p>+48 739 202 440</p>
                     </div>
-                  </div>
-                </div>
-                <div class="uk-width-medium@m uk-grid-item-match uk-flex-middle">
-                  <div class=uk-panel>
-                    <div class="uk-margin uk-text-left@s uk-text-center" uk-scrollspy-class> <a class="el-content uk-button uk-button-secondary" href=# uk-scroll> Kontakt </a> </div>
                   </div>
                 </div>
               </div>
