CONTACT FORM Width of subsections of contact sections has beed applied.

--- a/app/index.html
+++ b/app/index.html
@@ -203,9 +203,15 @@
           <div class=uk-container>
             <div class="uk-container uk-margin-xlarge">
               <div class=uk-grid-large uk-grid>
-                <div class="uk-width-medium@m uk-grid-item-match uk-flex-middle">
+                <div class="uk-width-xlarge@m uk-grid-item-match uk-flex-middle">
                   <div class=uk-panel>
-                    <div class=uk-margin uk-scrollspy-class> <img data-src=/templates/yootheme/cache/ap-38835739.png data-srcset="/templates/yootheme/cache/ap-38835739.png 250w, /templates/yootheme/cache/ap-932a5736.png 500w" data-sizes="(min-width: 250px) 250px" data-width=4252 data-height=4176 class=el-image alt uk-img> </div>
+                    <h2 class="uk-text-center@s uk-text-center uk-h1" uk-scrollspy-class> Piotr Trajdos </h2>
+                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
+                      <p>Ul. Brzozowa 21, 62-002 Jelonek.</p>
+                    </div>
+                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
+                      <p>+48 739 202 440</p>
+                    </div>
                   </div>
                 </div>
                 <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
@@ -225,29 +231,11 @@
                         <div class="uk-margin">
                           <textarea class="uk-textarea" rows="5" placeholder="Textarea"></textarea>
                         </div>
-                        <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                          <label><input class="uk-radio" type="radio" name="radio2" checked> A</label>
-                          <label><input class="uk-radio" type="radio" name="radio2"> B</label>
-                        </div>
-                        <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                          <label><input class="uk-checkbox" type="checkbox" checked> A</label>
-                          <label><input class="uk-checkbox" type="checkbox"> B</label>
-                        </div>
                       </fieldset>
                     </form>
                   </div>
                 </div>
-                <div class="uk-width-medium@m uk-grid-item-match uk-flex-middle">
-                  <div class=uk-panel>
-                    <h2 class="uk-text-center@s uk-text-center uk-h1" uk-scrollspy-class> Piotr Trajdos </h2>
-                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
-                      <p>Ul. Brzozowa 21, 62-002 Jelonek.</p>
-                    </div>
-                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
-                      <p>+48 739 202 440</p>
-                    </div>
-                  </div>
-                </div>
+
               </div>
             </div>
           </div>
