--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
             </div>
           </div>
         </div>
+        <!-- Offer section -->
         <div class="uk-section-default uk-section">
           <div class=uk-container>
             <div class=uk-grid-margin uk-grid>
@@ -139,17 +140,20 @@
                 <h1><p>Zakres Usług</p></h1>
                 <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]">
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> <img data-src=/templates/yootheme/cache/photo-1451933371645-a3029668b979-1be84dec.jpeg data-srcset="/templates/yootheme/cache/photo-1451933371645-a3029668b979-1be84dec.jpeg 640w" data-sizes="(min-width: 640px) 640px" data-width=640 data-height=480 class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> usługi remontowe </h3></div>
                       </div>
-                      <a data-type=iframe href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
+                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
                     </div>
                   </div>
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0 uk-toggle="cls: uk-light uk-dark; mode: hover"> <img data-src=/templates/yootheme/cache/photo-1522771739844-6a9f6d5f14af-1-893e5766.jpeg data-srcset="/templates/yootheme/cache/photo-1522771739844-6a9f6d5f14af-1-893e5766.jpeg 640w" data-sizes="(min-width: 640px) 640px" data-width=640 data-height=480 class=el-image alt="malowanie Poznań" uk-img>
-                      <div class="uk-position-cover uk-transition-scale-up"><img data-src=https://malujemypoznan.com.pl/kontakt class=el-hover-image alt uk-cover uk-img></div>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0 uk-toggle="cls: uk-light uk-dark; mode: hover"> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
+                      <div class="uk-position-cover uk-transition-scale-up">
+                        <img data-src=https://malujemypoznan.com.pl/kontakt class=el-hover-image alt uk-cover uk-img></div>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Malowanie </h3></div>
@@ -158,39 +162,43 @@
                     </div>
                   </div>
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> <img data-src=/templates/yootheme/cache/photo-1513506003901-1e6a229e2d15-708850ff.jpeg data-srcset="/templates/yootheme/cache/photo-1513506003901-1e6a229e2d15-708850ff.jpeg 640w" data-sizes="(min-width: 640px) 640px" data-width=640 data-height=480 class="uk-transition-scale-up uk-transition-opaque el-image" alt="szpachlowanie ścian i sufitów" uk-img>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Szpachlowanie </h3></div>
                       </div>
-                      <a data-type=iframe href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
+                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
                     </div>
                   </div>
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> <img data-src=/templates/yootheme/cache/photo-1504297050568-910d24c426d3-967bed5e.jpeg data-srcset="/templates/yootheme/cache/photo-1504297050568-910d24c426d3-967bed5e.jpeg 384w" data-sizes="(min-width: 384px) 384px" data-width=384 data-height=576 class="uk-transition-scale-up uk-transition-opaque el-image" alt="malowanie Poznań" uk-img>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Biuro </h3></div>
                       </div>
-                      <a data-type=iframe href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
+                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
                     </div>
                   </div>
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> <img data-src=/templates/yootheme/cache/housebuilding-1407499_640-e26ef858.jpeg data-srcset="/templates/yootheme/cache/housebuilding-1407499_640-e26ef858.jpeg 640w" data-sizes="(min-width: 640px) 640px" data-width=640 data-height=470 class="uk-transition-scale-up uk-transition-opaque el-image" alt="Budowa domów" uk-img>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Budowa domów </h3></div>
                       </div>
-                      <a data-type=iframe href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
+                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
                     </div>
                   </div>
                   <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> <img data-src=/templates/yootheme/cache/photo-1528754704377-60e053a66165-5a3a2983.jpeg data-srcset="/templates/yootheme/cache/photo-1528754704377-60e053a66165-5a3a2983.jpeg 400w" data-sizes="(min-width: 400px) 400px" data-width=400 data-height=600 class="uk-transition-scale-up uk-transition-opaque el-image" alt="malowanie wnętrz Poznań" uk-img>
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
+                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
                       <div class=uk-position-center>
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Mieszkanie </h3></div>
                       </div>
-                      <a data-type=iframe href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
+                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
                     </div>
                   </div>
                 </div>
@@ -198,6 +206,7 @@
             </div>
           </div>
         </div>
+        <!-- End of offer section -->
         <!-- Contact section -->
         <div class="uk-section-default uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
           <div class=uk-container>
@@ -219,9 +228,6 @@
                     <form>
                       <fieldset class="uk-fieldset">
                         <legend class="uk-legend">Legend</legend>
-                        <div class="uk-margin">
-                          <input class="uk-input" type="text" placeholder="Input">
-                        </div>
                         <div class="uk-margin">
                           <input class="uk-input" type="text" placeholder="Input">
                         </div>
