SUMMARY SECTION Image added to left side of summary section.

--- a/app/index.html
+++ b/app/index.html
@@ -90,13 +90,15 @@
           </div>
         </div>
         <!-- End of the header image -->
-
+        <!-- Summary section -->
         <div id=firma class="uk-section-default uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-medium&quot;,&quot;delay&quot;:200}>
           <div class="uk-grid-large uk-margin-xlarge" uk-grid>
             <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
               <div class=uk-panel>
                 <div class=uk-margin uk-scrollspy-class>
-                  <a href=https://malujemypoznan.com.pl/oferta class=el-link><img data-src=/templates/yootheme/cache/USLUGI-f6fad4fd.png data-srcset="/templates/yootheme/cache/USLUGI-f6fad4fd.png 750w, /templates/yootheme/cache/USLUGI-32a881e4.png 768w, /templates/yootheme/cache/USLUGI-a18f1bae.png 769w, /templates/yootheme/cache/USLUGI-bb15f030.png 770w" data-sizes="(min-width: 750px) 750px" data-width=770 data-height=466 class="el-image uk-border-rounded" alt="malarz Poznań, malowanie Poznań" uk-img></a>
+                  <a href=https://malujemypoznan.com.pl/oferta class=el-link>
+                    <img src="images/side.png" class="el-image uk-border-rounded" alt="malarz Poznań, malowanie Poznań" uk-img>
+                  </a>
                 </div>
               </div>
             </div>
@@ -132,6 +134,7 @@
             </div>
           </div>
         </div>
+        <!-- End of summary section -->
         <!-- Offer section -->
         <div class="uk-section-default uk-section">
           <div class=uk-container>
@@ -227,15 +230,15 @@
                   <div class=uk-panel>
                     <form>
                       <fieldset class="uk-fieldset">
-                        <legend class="uk-legend">Legend</legend>
+                        <legend class="uk-legend">Contact Form</legend>
                         <div class="uk-margin">
-                          <input class="uk-input" type="text" placeholder="Input">
+                          <input class="uk-input" type="text" placeholder="Fullname">
                         </div>
                         <div class="uk-margin">
-                          <input class="uk-input" type="text" placeholder="Input">
+                          <input class="uk-input" type="text" placeholder="Phone">
                         </div>
                         <div class="uk-margin">
-                          <textarea class="uk-textarea" rows="5" placeholder="Textarea"></textarea>
+                          <textarea class="uk-textarea" rows="9" placeholder="Your message"></textarea>
                         </div>
                       </fieldset>
                     </form>
