--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                   <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center" uk-scrollspy-class><h1 style="text-align: left;"><span style="font-size: 36pt;">&nbsp; &nbsp; 739-202-440</span><br /><br />Malowanie wnętrz Poznań<br />Kompleksowe remonty<br />Budowa domów<br /><br /></h1> <span style="font-size: 36pt; color: #666666;"><br /></span> </h1>
                   <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-large" uk-scrollspy-class=uk-animation-slide-left-small>
                     <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
-                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
+                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
                       <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href=https://malujemypoznan.com.pl/oferta> Nasza Oferta </a> </div>
                     </div>
                   </div>
@@ -112,7 +112,9 @@
                     <br />Nasz zespół zawsze wykonuje powierzoną pracę starannie i z największą dbałością o szczegóły. Przed rozpoczęciem każdej pracy sami zajmujemy się zabezpieczeniem pomieszczeń, w celu uniknięcia niepotrzebnych zabrudzeń, a po zakończonej pracy pozostawiamy czyste wnętrze i miłe wrażenie. Serdecznie zapraszamy do skorzystania z naszych usług. Jak <strong><em>malarz Poznań</em></strong> to tylko AP Invest.</p>
                     <p>&nbsp;</p>
                   </div>
-                  <div class="uk-margin uk-text-center" uk-scrollspy-class> <a class="el-content uk-button uk-button-danger" href=https://malujemypoznan.com.pl/kontakt> darmowa wycena </a> </div>
+                  <div class="uk-margin uk-text-center" uk-scrollspy-class> 
+                    <a class="el-content uk-button uk-button-danger" href=https://malujemypoznan.com.pl/kontakt> darmowa wycena </a> 
+                  </div>
                 </div>
               </div>
             </div>
