NAVIAGTION Navigation added to page. Fully responsive - slide in from left on mobile.

--- a/app/index.html
+++ b/app/index.html
@@ -13,62 +13,58 @@
     <div class=uk-offcanvas-content>
       <div class=tm-page>
         <!-- Navigation -->
-        <!-- <div class="tm-header-mobile uk-hidden@m"> -->
-        <!--   <nav class=uk-navbar-container uk-navbar> -->
-        <!--     <div class=uk-navbar-left> -->
-        <!--       <a class=uk-navbar-toggle href=#tm-mobile uk-toggle> -->
-        <!--         <div uk-navbar-toggle-icon></div> -->
-        <!--       </a> -->
-        <!--     </div> -->
-        <!--     <div class=uk-navbar-center> -->
-        <!--       <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST"> </a> -->
-        <!--     </div> -->
-        <!--   </nav> -->
-        <!--   <div id=tm-mobile uk-offcanvas mode=push overlay> -->
-        <!--     <div class=uk-offcanvas-bar> -->
-        <!--       <button class=uk-offcanvas-close type=button uk-close></button> -->
-        <!--       <div class=uk-child-width-1-1 uk-grid> -->
-        <!--         <div> -->
-        <!--           <div class=uk-panel id=module-0> -->
-        <!--             <ul class="uk-nav uk-nav-default"> -->
-        <!--               <li class=uk-active><a href=/>Home</a> -->
-        <!--               </li> -->
-        <!--               <li><a href=/oferta>Oferta</a></li> -->
-        <!--               <li><a href=/budowa-domow>Budowa Domów</a></li> -->
-        <!--               <li><a href=/malowanie-natryskowe>Malowanie Natryskowe</a></li> -->
-        <!--               <li><a href=/kontakt>Kontakt</a></li> -->
-        <!--               <li><a href=/blog>Blog</a></li> -->
-        <!--             </ul> -->
-        <!--           </div> -->
-        <!--         </div> -->
-        <!--       </div> -->
-        <!--     </div> -->
-        <!--   </div> -->
-        <!-- </div> -->
-        <!-- <div class="tm-header uk-visible@m" uk-header> -->
-        <!--   <div uk-sticky media=@m show-on-up animation=uk-animation-slide-top cls-active=uk-navbar-sticky sel-target=.uk-navbar-container> -->
-        <!--     <div class=uk-navbar-container> -->
-        <!--       <div class=uk-container> -->
-        <!--         <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}> -->
-        <!--           <div class=uk-navbar-left> -->
-        <!--             <a href=https://malujemypoznan.com.pl class="uk-navbar-item uk-logo"> <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST"></a> -->
-        <!--           </div> -->
-        <!--           <div class=uk-navbar-right> -->
-        <!--             <ul class=uk-navbar-nav> -->
-        <!--               <li class=uk-active><a href=/>Home</a> -->
-        <!--               </li> -->
-        <!--               <li><a href=/oferta>Oferta</a></li> -->
-        <!--               <li><a href=/budowa-domow>Budowa Domów</a></li> -->
-        <!--               <li><a href=/malowanie-natryskowe>Malowanie Natryskowe</a></li> -->
-        <!--               <li><a href=/kontakt>Kontakt</a></li> -->
-        <!--               <li><a href=/blog>Blog</a></li> -->
-        <!--             </ul> -->
-        <!--           </div> -->
-        <!--         </nav> -->
-        <!--       </div> -->
-        <!--     </div> -->
-        <!--   </div> -->
-        <!-- </div> -->
+        <div class="tm-header-mobile uk-hidden@m">
+          <nav class=uk-navbar-container uk-navbar>
+            <div class=uk-navbar-left>
+              <a class=uk-navbar-toggle href=#tm-mobile uk-toggle>
+                <div uk-navbar-toggle-icon></div>
+              </a>
+            </div>
+            <div class=uk-navbar-center>
+              <a class="uk-navbar-item uk-logo" href="#"> <img src="" alt="PaintingAndDecorating"> </a>
+            </div>
+          </nav>
+          <div id=tm-mobile uk-offcanvas mode=push overlay>
+            <div class=uk-offcanvas-bar>
+              <button class=uk-offcanvas-close type=button uk-close></button>
+              <div class=uk-child-width-1-1 uk-grid>
+                <div>
+                  <div class=uk-panel id=module-0>
+                    <ul class="uk-nav uk-nav-default">
+                      <li><a href=/oferta>About me</a></li>
+                      <li><a href=/budowa-domow>Offer</a></li>
+                      <li><a href=/malowanie-natryskowe>Testimonials</a></li>
+                      <li><a href=/kontakt>Gallery</a></li>
+                      <li><a href=/blog>Contact</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tm-header uk-visible@m" uk-header>
+          <div uk-sticky media=@m show-on-up animation=uk-animation-slide-top cls-active=uk-navbar-sticky sel-target=.uk-navbar-container>
+            <div class=uk-navbar-container>
+              <div class=uk-container>
+                <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}>
+                  <div class=uk-navbar-left>
+                    <a class="uk-navbar-item uk-logo" href="#"> <img src="" alt="PaintingAndDecorating"> </a>
+                  </div>
+                  <div class=uk-navbar-right>
+                    <ul class=uk-navbar-nav>
+                      <li><a href="#firma" uk-scroll offset="-150" duration="800">About me</a></li>
+                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Offer</a></li>
+                      <li><a href="#testimonials" uk-scroll offset="0" duration="800">Testimonials</a></li>
+                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Gallery</a></li>
+                      <li><a href="#contact" uk-scroll offset="0" duration="800">Contact</a></li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
         <!--End of navigation -->
         <!-- Header image -->
         <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light tm-header-transparent-placeholder>
@@ -120,7 +116,7 @@
             </div>
           </div>
         </div>
-        <div class="uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
+        <div id="testimonials" class="uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
           <div class=uk-container>
             <div class=uk-grid-margin uk-grid>
               <div class=uk-width-1-1@s>
@@ -138,12 +134,11 @@
         </div>
         <!-- End of summary section -->
         <!-- Offer section -->
-        <div class="uk-section-default uk-section">
+        <div id="offer" class="uk-section-default uk-section">
           <div class=uk-container>
             <div class=uk-grid-margin uk-grid>
               <div class=uk-width-1-1@m>
-                <h1><p>Zakres Usług</p></h1>
-                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]">
+                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]">?
                   <div>
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
                       <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
@@ -213,7 +208,7 @@
         </div>
         <!-- End of offer section -->
         <!-- Contact section -->
-        <div class="uk-section-default uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
+        <div id="contact" class="uk-section-default uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
           <div class=uk-container>
             <div class="uk-container uk-margin-xlarge">
               <div class=uk-grid-large uk-grid>
