--- a/app/index.html
+++ b/app/index.html
@@ -135,70 +135,71 @@
         <!-- End of summary section -->
         <!-- Offer section -->
         <div id="offer" class="uk-section-default uk-section">
-          <div class=uk-container>
-            <div class=uk-grid-margin uk-grid>
-              <div class=uk-width-1-1@m>
-                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]">?
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
-                      <div class=uk-position-center>
+          <div class="uk-container">
+            <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid="">
+              <div class="uk-width-1-1@m uk-first-column">
+                <h1><p>Zakres Usług</p></h1>
+                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
+                  <div class="uk-first-column" style="transform: translateY(3.08062px);">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> usługi remontowe </h3></div>
                       </div>
-                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
+                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
                     </div>
                   </div>
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0 uk-toggle="cls: uk-light uk-dark; mode: hover"> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
+                  <div style="transform: translateY(3.08062px);" class="uk-grid-margin uk-first-column">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0" uk-toggle="cls: uk-light uk-dark; mode: hover"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
                       <div class="uk-position-cover uk-transition-scale-up">
-                        <img data-src=https://malujemypoznan.com.pl/kontakt class=el-hover-image alt uk-cover uk-img></div>
-                      <div class=uk-position-center>
+                        <img data-src="https://malujemypoznan.com.pl/kontakt" class="el-hover-image uk-cover" alt="" uk-cover="" uk-img=""></div>
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Malowanie </h3></div>
                       </div>
-                      <a data-type=image data-alt="malowanie Poznań" href=/images/photo-1522771739844-6a9f6d5f14af-1.jpg class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Malowanie</h4>"></a>
+                      <a data-type="image" data-alt="malowanie Poznań" href="/images/photo-1522771739844-6a9f6d5f14af-1.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Malowanie</h4>"></a>
                     </div>
                   </div>
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
-                      <div class=uk-position-center>
+                  <div style="transform: translateY(3.08062px);" class="uk-grid-margin uk-first-column">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Szpachlowanie </h3></div>
                       </div>
-                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
+                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
                     </div>
                   </div>
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
-                      <div class=uk-position-center>
+                  <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Biuro </h3></div>
                       </div>
-                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
+                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
                     </div>
                   </div>
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
-                      <div class=uk-position-center>
+                  <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Budowa domów </h3></div>
                       </div>
-                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
+                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
                     </div>
                   </div>
-                  <div>
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex=0> 
-                      <img src="images/one.jpeg" class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img>
-                      <div class=uk-position-center>
+                  <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Mieszkanie </h3></div>
                       </div>
-                      <a  href=https://malujemypoznan.com.pl/kontakt class=uk-position-cover data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
+                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
                     </div>
                   </div>
                 </div>
