--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
               </a>
             </div>
             <div class=uk-navbar-center>
-              <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST"> </a>
+              <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
             </div>
           </nav>
           <div id=tm-mobile uk-offcanvas mode=push overlay>
@@ -53,7 +53,7 @@
                 <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}>
                   <div class=uk-navbar-left>
                     <a href=https://malujemypoznan.com.pl class="uk-navbar-item uk-logo">
-                      <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST">
+              <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
                     </a>
                   </div>
                   <div class=uk-navbar-right>
