CALL TO ACTION Buttons personalized and styled.

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
               </a>
             </div>
             <div class=uk-navbar-center>
-              <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
+              <a class="uk-navbar-item uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
             </div>
           </nav>
           <div id=tm-mobile uk-offcanvas mode=push overlay>
@@ -52,8 +52,8 @@
               <div class="uk-container">
                 <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}>
                   <div class=uk-navbar-left>
-                    <a href=https://malujemypoznan.com.pl class="uk-navbar-item uk-logo">
-              <a class="uk-navbar-item uk-logo" href=https://malujemypoznan.com.pl> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
+                    <a href="" class="uk-navbar-item uk-logo">
+              <a class="uk-navbar-item uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
                     </a>
                   </div>
                   <div class=uk-navbar-right>
@@ -82,8 +82,8 @@
                   <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center" uk-scrollspy-class><h1 style="text-align: left;"><span style="font-size: 36pt;">&nbsp; &nbsp; 739-202-440</span><br /><br />Malowanie wnętrz Poznań<br />Kompleksowe remonty<br />Budowa domów<br /><br /></h1> <span style="font-size: 36pt; color: #666666;"><br /></span> </h1>
                   <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-xlarge" uk-scrollspy-class=uk-animation-slide-left-small>
                     <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
-                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
-                      <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href=https://malujemypoznan.com.pl/oferta> Nasza Oferta </a> </div>
+                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href="#contact" uk-scroll offset="-15" duration="800"> Get a Quote</a> </div>
+                      <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href="#offer" uk-scroll offset="-15" duration="800" > Offer</a> </div>
                     </div>
                   </div>
                 </div>
@@ -98,7 +98,7 @@
             <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
               <div class=uk-panel>
                 <div class=uk-margin uk-scrollspy-class>
-                  <a href=https://malujemypoznan.com.pl/oferta class=el-link>
+                  <a href="" class=el-link>
                     <img src="images/side.png" class="el-image uk-border-rounded" alt="malarz Poznań, malowanie Poznań" uk-img>
                   </a>
                 </div>
@@ -115,7 +115,7 @@
                     <p>&nbsp;</p>
                   </div>
                   <div class="uk-margin uk-text-center" uk-scrollspy-class> 
-                    <a class="el-content uk-button uk-button-danger" href=https://malujemypoznan.com.pl/kontakt> darmowa wycena </a> 
+                    <a class="el-content uk-button uk-button-danger" href="#contact" uk-scroll offset="-15" duration="800">Get a quote</a> 
                   </div>
                 </div>
               </div>
@@ -153,14 +153,14 @@
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> usługi remontowe </h3></div>
                       </div>
-                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
+                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
                     </div>
                   </div>
                   <div style="transform: translateY(3.08062px);" class="uk-grid-margin uk-first-column">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0" uk-toggle="cls: uk-light uk-dark; mode: hover"> 
                       <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
                       <div class="uk-position-cover uk-transition-scale-up">
-                        <img data-src="https://malujemypoznan.com.pl/kontakt" class="el-hover-image uk-cover" alt="" uk-cover="" uk-img=""></div>
+                        <img data-src="" class="el-hover-image uk-cover" alt="" uk-cover="" uk-img=""></div>
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Malowanie </h3></div>
@@ -175,7 +175,7 @@
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Szpachlowanie </h3></div>
                       </div>
-                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
+                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
@@ -185,7 +185,7 @@
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Biuro </h3></div>
                       </div>
-                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
+                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
@@ -195,7 +195,7 @@
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Budowa domów </h3></div>
                       </div>
-                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
+                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
@@ -205,7 +205,7 @@
                         <div class="uk-panel uk-padding">
                           <h3 class="el-title uk-margin"> Mieszkanie </h3></div>
                       </div>
-                      <a data-type="iframe" href="https://malujemypoznan.com.pl/kontakt" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
+                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
                     </div>
                   </div>
                 </div>
@@ -266,8 +266,8 @@
                   <div class=uk-text-center uk-scrollspy-class=uk-animation-slide-bottom-small>
                     <ul class="uk-subnav uk-margin-remove-bottom uk-flex-center" uk-margin>
                       <li class=el-item> <a class=el-link href=# uk-scroll>Polityka Prywatności</a> </li>
-                      <li class=el-item> <a class=el-link href=https://malujemypoznan.com.pl/oferta>Oferta</a> </li>
-                      <li class=el-item> <a class=el-link href=https://malujemypoznan.com.pl/kontakt>Kontakt</a> </li>
+                      <li class=el-item> <a class=el-link href="">Oferta</a> </li>
+                      <li class=el-item> <a class=el-link href="">Kontakt</a> </li>
                     </ul>
                   </div>
                 </div>
